# internal/model/customer.go
@@ -3,7 +3,7 @@ package model
 import "github.com/google/uuid"
 
 type CustomerSearchRequest struct {
-	Name *string
+	Name *string `form:"name"`
 	CriteriaBase
 }
 
@@ -11,4 +11,9 @@ type CustomerDataReponse struct {
 	ID        uuid.UUID `json:"id"`
 	FirstName string    `json:"firstName"`
 	LastName  string    `json:"lastName"`
+}
+
+type CustomerUpdateRequest struct {
+	FirstName string `json:"firstName"`
+	LastName  string `json:"lastName"`
 }
